--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "angular-animate": "^1.4.1",
     "angular-aria": "^1.4.1",
     "angular-material": "^0.10.0",
+    "angular-material-icons": "^0.5.0",
+    "angular-messages": "^1.4.1",
+    "angular-route": "^1.4.1",
     "body-parser": "^1.13.1",
     "express": "^4.13.0",
     "mongoose": "^4.0.6"
